Updated deploy now puts security on Windows machines, too, and uses absolute settings-derived paths for security files like the rest of deploy.